2006-05-02  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* filters.h: Add C++ guards.

2006-05-07  Bruno Haible  <bruno@clisp.org>

	* x-perl.c (extract_variable): Fix syntax error introduced on
	2005-10-03.

2006-05-07  Bruno Haible  <bruno@clisp.org>

	* format-awk.c: Include xvasprintf.h instead of xerror.h.
	* format-elisp.c: Likewise.
	* format-librep.c: Likewise.
	* format-pascal.c: Likewise.
	* format-php.c: Likewise.
	* format-tcl.c: Likewise.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* write-java.c (msgdomain_write_java): Specify source-version 1.3 and
	require target-version 1.1.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* msginit.c (main): Simplify by use of xasprintf().
	* write-java.c: Include xvasprintf.h.
	(msgdomain_write_java): Simplify by use of xasprintf().
	* x-c.c: Include xvasprintf.h.
	(phase8a_get): Simplify by use of xasprintf().
	* xgettext.c: Don't include stpcpy.h.
	(remember_a_message, remember_a_message_plural): Simplify by use of
	xasprintf().

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c: Include xvasprintf.h.
	* msginit.c: Likewise.
	* msgl-cat.c: Likewise.
	* msgl-charset.c: Likewise.
	* po-xerror.c: Likewise.
	* x-csharp.c: Likewise.
	* x-glade.c: Likewise.
	* x-python.c: Likewise.
	* xgettext.c: Likewise.
	* format-boost.c: Include xvasprintf.h instead of xerror.h.
	* format-c.c: Likewise.
	* format-csharp.c: Likewise.
	* format-gcc-internal.c: Likewise.
	* format-java.c: Likewise.
	* format-lisp.c: Likewise.
	* format-perl.c: Likewise.
	* format-python.c: Likewise.
	* format-qt.c: Likewise.
	* format-scheme.c: Likewise.
	* format-ycp.c: Likewise.
	* msgexec.c: Likewise.
	* msgl-check.c: Likewise.
	* msgl-iconv.c: Likewise.
	* open-po.c: Likewise.
	* po-charset.c: Likewise.
	* po-lex.c: Likewise.
	* po-time.c: Likewise.
	* read-po-abstract.c: Likewise.
	* read-properties.c: Likewise.
	* read-stringtable.c: Likewise.
	* write-po.c: Likewise.

2006-04-30  Bruno Haible  <bruno@clisp.org>
